--- a/src/agent/agent.ipynb
+++ b/src/agent/agent.ipynb
@@ -35,6 +35,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenai()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [
@@ -101,12 +110,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# vectorstore = ElasticsearchStore.from_documents(\n",
-    "#     docs,\n",
-    "#     embeddings,\n",
-    "#     index_name=\"elasticsearch-self-query-demo\",\n",
-    "#     es_url=\"http://localhost:9200\",\n",
-    "# )"
+    "vectorstore = ElasticsearchStore.from_documents(\n",
+    "    docs,\n",
+    "    embeddings,\n",
+    "    index_name=\"page_content\",\n",
+    "    es_url=\"http://localhost:9200\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_card = docs[:5]\n",
+    "\n",
+    "retriever = SelfQueryRetriever.from_llm(\n",
+    "    llm, vectorstore, \"Создай идеальную карту для запроса пользователя\", user_cards, verbose=True\n",
+    ")"
    ]
   },
   {
